[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/round/round_alt.png" type="Texture" id=1]
[ext_resource path="res://Round.gd" type="Script" id=2]
[ext_resource path="res://sprites/particles/flame_04_64x.png" type="Texture" id=3]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 1, -7, 1, -4, 2, -4, 2, 8, -2, 8, -2, -4, -1, -4, -1, -7 )

[sub_resource type="ParticlesMaterial" id=2]
lifetime_randomness = 0.75
emission_shape = 1
emission_sphere_radius = 4.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 40.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 10.0
linear_accel_random = 1.0
damping = 30.0
damping_random = 0.4
angle = 45.0
angle_random = 1.0
scale = 3.0
scale_random = 0.5
color = Color( 0.937255, 0.27451, 0, 1 )
hue_variation = 0.15
hue_variation_random = 1.0

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 0.792157, 0.211765, 0, 1, 0.929412, 0.72549, 0, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
lifetime_randomness = 0.7
emission_shape = 1
emission_sphere_radius = 0.5
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 10.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 4.0
damping_random = 0.2
angle = 360.0
angle_random = 1.0
scale = 0.02
scale_random = 0.03
color_ramp = SubResource( 4 )

[node name="Round" type="RigidBody2D"]
collision_layer = 4
collision_mask = 5
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
sleeping = true
script = ExtResource( 2 )

[node name="RoundSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ExplosionParticles2D" type="Particles2D" parent="."]
emitting = false
amount = 250
lifetime = 0.3
one_shot = true
explosiveness = 1.0
process_material = SubResource( 2 )

[node name="ExplosionTimer" type="Timer" parent="."]
one_shot = true

[node name="Particles2D" type="Particles2D" parent="."]
show_behind_parent = true
position = Vector2( 0, 6 )
amount = 150
preprocess = 1.0
speed_scale = 1.5
process_material = SubResource( 5 )
texture = ExtResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_Round_body_entered"]
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_ExplosionTimer_timeout"]
